generated/us/bringardner/fsh/parser/FileSourceShPreProcessorParser.java
// Generated from FileSourceShPreProcessor.g4 by ANTLR 4.13.2
package us.bringardner.fsh.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FileSourceShPreProcessorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, PPID=14, PPDIGIT=15, PPTAG=16, 
		PPNL=17, PPESC=18, PPTEXT=19, WS=20;
	public static final int
		RULE_ppcode = 0, RULE_ppescape = 1, RULE_ppexpr = 2, RULE_ppcommand = 3, 
		RULE_pp_backtick_command = 4, RULE_pp_dollar_command = 5, RULE_pp_nested = 6, 
		RULE_pp_dq = 7, RULE_pp_parameter = 8, RULE_pp_param = 9, RULE_ppvariable = 10, 
		RULE_pptext = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"ppcode", "ppescape", "ppexpr", "ppcommand", "pp_backtick_command", "pp_dollar_command", 
			"pp_nested", "pp_dq", "pp_parameter", "pp_param", "ppvariable", "pptext"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'$(('", "')'", "'`'", "'$('", "'('", "'\"'", "'''", "'${'", "'}'", 
			"'{'", "'$'", "'?'", "'*'", null, null, null, "'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "PPID", "PPDIGIT", "PPTAG", "PPNL", "PPESC", "PPTEXT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FileSourceShPreProcessor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FileSourceShPreProcessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PpcodeContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FileSourceShPreProcessorParser.EOF, 0); }
		public List<PpcommandContext> ppcommand() {
			return getRuleContexts(PpcommandContext.class);
		}
		public PpcommandContext ppcommand(int i) {
			return getRuleContext(PpcommandContext.class,i);
		}
		public List<PpexprContext> ppexpr() {
			return getRuleContexts(PpexprContext.class);
		}
		public PpexprContext ppexpr(int i) {
			return getRuleContext(PpexprContext.class,i);
		}
		public List<PpvariableContext> ppvariable() {
			return getRuleContexts(PpvariableContext.class);
		}
		public PpvariableContext ppvariable(int i) {
			return getRuleContext(PpvariableContext.class,i);
		}
		public List<PptextContext> pptext() {
			return getRuleContexts(PptextContext.class);
		}
		public PptextContext pptext(int i) {
			return getRuleContext(PptextContext.class,i);
		}
		public List<Pp_parameterContext> pp_parameter() {
			return getRuleContexts(Pp_parameterContext.class);
		}
		public Pp_parameterContext pp_parameter(int i) {
			return getRuleContext(Pp_parameterContext.class,i);
		}
		public List<PpescapeContext> ppescape() {
			return getRuleContexts(PpescapeContext.class);
		}
		public PpescapeContext ppescape(int i) {
			return getRuleContext(PpescapeContext.class,i);
		}
		public List<TerminalNode> PPID() { return getTokens(FileSourceShPreProcessorParser.PPID); }
		public TerminalNode PPID(int i) {
			return getToken(FileSourceShPreProcessorParser.PPID, i);
		}
		public PpcodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppcode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPpcode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPpcode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPpcode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpcodeContext ppcode() throws RecognitionException {
		PpcodeContext _localctx = new PpcodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ppcode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 937982L) != 0)) {
				{
				setState(31);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
					{
					setState(24);
					ppcommand();
					}
					break;
				case T__0:
					{
					setState(25);
					ppexpr();
					}
					break;
				case T__10:
					{
					setState(26);
					ppvariable();
					}
					break;
				case T__1:
				case T__4:
				case T__5:
				case T__6:
				case T__8:
				case T__9:
				case PPNL:
				case PPTEXT:
					{
					setState(27);
					pptext();
					}
					break;
				case T__7:
					{
					setState(28);
					pp_parameter();
					}
					break;
				case PPESC:
					{
					setState(29);
					ppescape();
					}
					break;
				case PPID:
					{
					setState(30);
					match(PPID);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PpescapeContext extends ParserRuleContext {
		public TerminalNode PPESC() { return getToken(FileSourceShPreProcessorParser.PPESC, 0); }
		public PpescapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppescape; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPpescape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPpescape(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPpescape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpescapeContext ppescape() throws RecognitionException {
		PpescapeContext _localctx = new PpescapeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ppescape);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(PPESC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PpexprContext extends ParserRuleContext {
		public List<Pp_nestedContext> pp_nested() {
			return getRuleContexts(Pp_nestedContext.class);
		}
		public Pp_nestedContext pp_nested(int i) {
			return getRuleContext(Pp_nestedContext.class,i);
		}
		public PpexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPpexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPpexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPpexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpexprContext ppexpr() throws RecognitionException {
		PpexprContext _localctx = new PpexprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ppexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
				{
				{
				setState(41);
				pp_nested();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(T__1);
			setState(48);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PpcommandContext extends ParserRuleContext {
		public Pp_backtick_commandContext pp_backtick_command() {
			return getRuleContext(Pp_backtick_commandContext.class,0);
		}
		public Pp_dollar_commandContext pp_dollar_command() {
			return getRuleContext(Pp_dollar_commandContext.class,0);
		}
		public PpcommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppcommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPpcommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPpcommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPpcommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpcommandContext ppcommand() throws RecognitionException {
		PpcommandContext _localctx = new PpcommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ppcommand);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				pp_backtick_command();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				pp_dollar_command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_backtick_commandContext extends ParserRuleContext {
		public Pp_backtick_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_backtick_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_backtick_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_backtick_command(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_backtick_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_backtick_commandContext pp_backtick_command() throws RecognitionException {
		Pp_backtick_commandContext _localctx = new Pp_backtick_commandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pp_backtick_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__2);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097142L) != 0)) {
				{
				{
				setState(55);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==T__2) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_dollar_commandContext extends ParserRuleContext {
		public List<Pp_nestedContext> pp_nested() {
			return getRuleContexts(Pp_nestedContext.class);
		}
		public Pp_nestedContext pp_nested(int i) {
			return getRuleContext(Pp_nestedContext.class,i);
		}
		public Pp_dollar_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_dollar_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_dollar_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_dollar_command(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_dollar_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_dollar_commandContext pp_dollar_command() throws RecognitionException {
		Pp_dollar_commandContext _localctx = new Pp_dollar_commandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pp_dollar_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__3);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
				{
				{
				setState(64);
				pp_nested();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_nestedContext extends ParserRuleContext {
		public List<Pp_nestedContext> pp_nested() {
			return getRuleContexts(Pp_nestedContext.class);
		}
		public Pp_nestedContext pp_nested(int i) {
			return getRuleContext(Pp_nestedContext.class,i);
		}
		public List<Pp_dqContext> pp_dq() {
			return getRuleContexts(Pp_dqContext.class);
		}
		public Pp_dqContext pp_dq(int i) {
			return getRuleContext(Pp_dqContext.class,i);
		}
		public Pp_nestedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_nested; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_nested(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_nested(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_nested(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_nestedContext pp_nested() throws RecognitionException {
		Pp_nestedContext _localctx = new Pp_nestedContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pp_nested);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case PPID:
			case PPDIGIT:
			case PPTAG:
			case PPNL:
			case PPESC:
			case PPTEXT:
			case WS:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & 246L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
					{
					{
					setState(74);
					pp_nested();
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				match(T__1);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(T__0);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
					{
					{
					setState(82);
					pp_nested();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				match(T__1);
				setState(89);
				match(T__1);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				match(T__5);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097086L) != 0)) {
					{
					{
					setState(91);
					pp_dq();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				match(T__5);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(T__6);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097022L) != 0)) {
					{
					{
					setState(99);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==T__6) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(105);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_dqContext extends ParserRuleContext {
		public List<Pp_nestedContext> pp_nested() {
			return getRuleContexts(Pp_nestedContext.class);
		}
		public Pp_nestedContext pp_nested(int i) {
			return getRuleContext(Pp_nestedContext.class,i);
		}
		public Pp_dqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_dq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_dq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_dq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_dq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_dqContext pp_dq() throws RecognitionException {
		Pp_dqContext _localctx = new Pp_dqContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pp_dq);
		int _la;
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__4:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case PPID:
			case PPDIGIT:
			case PPTAG:
			case PPNL:
			case PPESC:
			case PPTEXT:
			case WS:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & 82L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__3);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
					{
					{
					setState(110);
					pp_nested();
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				match(T__1);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				match(T__0);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2097146L) != 0)) {
					{
					{
					setState(118);
					pp_nested();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(T__1);
				setState(125);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_parameterContext extends ParserRuleContext {
		public List<Pp_paramContext> pp_param() {
			return getRuleContexts(Pp_paramContext.class);
		}
		public Pp_paramContext pp_param(int i) {
			return getRuleContext(Pp_paramContext.class,i);
		}
		public Pp_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_parameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_parameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_parameterContext pp_parameter() throws RecognitionException {
		Pp_parameterContext _localctx = new Pp_parameterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pp_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__7);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2096638L) != 0)) {
				{
				{
				setState(129);
				pp_param();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pp_paramContext extends ParserRuleContext {
		public List<Pp_paramContext> pp_param() {
			return getRuleContexts(Pp_paramContext.class);
		}
		public Pp_paramContext pp_param(int i) {
			return getRuleContext(Pp_paramContext.class,i);
		}
		public Pp_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pp_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).enterPp_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FileSourceShPreProcessorListener ) ((FileSourceShPreProcessorListener)listener).exitPp_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FileSourceShPreProcessorVisitor ) return ((FileSourceShPreProcessorVisitor<? extends T>)visitor).visitPp_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pp_paramContext pp_param() throws RecognitionException {
		Pp_paramContext _localctx = new Pp_paramContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pp_param);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__10:
			case T__11:
			case T__12:
			case PPID:
			case PPDIGIT:
			case PPTAG:
			case PPNL:
			case PPESC:
			case PPTEXT:
			case WS:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case T__7:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				_la = _input.LA(1);
				if ( !(_la==T__7 || _la==T__9) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2096638L) != 0)) {
					{
					{
					setState(139);
					pp_param();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
